fix spacing for cover video

--- a/static/css/base.css
+++ b/static/css/base.css
@@ -177,3 +177,7 @@ footer {
 #video {
     width: 100%
 }
+
+.cover-video #video {
+    width: 75%;
+}
