--- a/static/css/paddings.css
+++ b/static/css/paddings.css
@@ -23,7 +23,7 @@
 }
 
 .cover-video {
-    padding: 70px 80px;
+    padding: 50px 80px;
 }
 
 /* Video title */
